--- a/virtualSensors/virtualSensors.html
+++ b/virtualSensors/virtualSensors.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Virtual Sensor Dashboard</title>
+    <title>Sensor Dashboard</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
     <script src="virtualSensors.js" type="text/javascript"></script>
     <style>
@@ -50,7 +50,8 @@
 </head>
 <body>
 <p id="status" style="background-color: red">MQTT not connected!</p>
-<table>
+<button type="button" onclick="toggleVisible(this, 'automate', ' Automator')">Show Automator</button>
+<table id="automate" style="display: none">
     <tr><td>Array with values</td><td>shop id</td><td>delay seconds</td><td></td></tr>
 <tr><td><input name="list" type="text" id="listField" value="[1,2,3,4]"/></td><td><input name="shopId" type="text" maxlength="20" id="shopIdField" value="shop2" /></td><td><input type="number"  min="0" id="interval" value="10"></td><td> <button type="button" onclick="startV()">Start</button> <button type="button" onclick="stopV()">Stop</button></td>
 </tr></table>
@@ -58,8 +59,8 @@
     <thead>
     <tr>
         <th>Shop</th>
-        <th colspan="3">input</th>
-        <th colspan="4" style="border-left:3px solid">Output</th>
+        <th colspan="3">input simulated sensors</th>
+        <th colspan="4" style="border-left:3px solid">output virtual sensors</th>
     </tr>
     <tr>
         <th></th>
@@ -74,10 +75,10 @@
     </thead>
     <tbody>
     <tr id="shop1">
-        <td>Shop1</td>
-        <td><input type="number" shop="shop1" min="0" sType="ble" onChange="updateValue(this)"></td>
-        <td><input type="number" shop="shop1" min="0" sType="cam" onChange="updateValue(this)"></td>
-        <td><input type="number" shop="shop1" min="0" sType="wifi" onChange="updateValue(this)"></td>
+        <td onclick="disableChilds('shop1', false)">Shop1</td>
+        <td><input type="number" shop="shop1" min="0" sType="ble" onChange="updateValue(this)" disabled></td>
+        <td><input type="number" shop="shop1" min="0" sType="cam" onChange="updateValue(this)" disabled></td>
+        <td><input type="number" shop="shop1" min="0" sType="wifi" onChange="updateValue(this)" disabled></td>
         <td style="border-left:3px solid"></td>
         <td></td>
         <td></td>
@@ -114,7 +115,7 @@
         <td></td>
     </tbody>
 </table>
-<button type="button" onclick="toggleVisible(this)">Show MQTT</button>
+<button type="button" onclick="toggleVisible(this, 'mqttTable', ' MQTT')">Show MQTT</button>
 <table id="mqttTable" style="display: none">
 <tr style="display: none"><td>0</td><td></td><td></td></tr>
 </table>
