--- a/virtualSensors/virtualSensors.html
+++ b/virtualSensors/virtualSensors.html
@@ -5,9 +5,23 @@
     <title>Sensor Dashboard</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
     <script src="virtualSensors.js" type="text/javascript"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/sankey.js"></script>
+    <script src="https://code.highcharts.com/modules/organization.js"></script>
     <style>
         input[type="number"] {
             width:50px;
+        }
+        .newValGraph {
+            background-color: rgba(255, 103, 0, 0.6);;
+            animation-name:bckanim1Graph;
+            animation-fill-mode:forwards;
+            animation-duration:3s;
+            animation-delay:0s;
+        }
+        @keyframes bckanim1Graph {
+            0% {background-color: rgba(255, 103, 0, 0.6);}
+            100% { background-color:transparent;}
         }
         .newVal {
             background-color:orange;
@@ -115,10 +129,20 @@
         <td></td>
     </tbody>
 </table>
-<button type="button" onclick="toggleVisible(this, 'mqttTable', ' MQTT')">Show MQTT</button>
+<button type="button" onclick="toggleVisible(this, 'mqttTable', ' MQTT')">Show MQTT</button> <button type="button" onclick="toggleVisible(this, 'graphFrame', ' Graph')">Show Graph</button>
+<div id="graphFrame" style="display: none">
+    <p id="statusGraph" style="background-color: red">MQTT not connected!</p>
+
+    <div id="cshop1"></div>
+    <div id="cshop2"></div>
+    <div id="cshop3"></div>
+    <div id="cshop4"></div>
+</div>
+<script src="sensorTree.js" type="text/javascript"></script>
 <table id="mqttTable" style="display: none">
 <tr style="display: none"><td>0</td><td></td><td></td></tr>
 </table>
+
 
 </body>
 </html>
